load("//:version.bzl", "MOSTROBOTPY_VERSION")
load("//bazel_scripts:generate_build_info.bzl", "generate_build_info")
load("//subprojects/robotpy-hal:generated_build_info.bzl", "define_pybind_library", "hal_simulation_extension", "wpihal_extension")

generate_build_info(
    name = "hal",
    local_pkgcfgs = [
        ("//subprojects/robotpy-native-wpihal:import", ["$(location //subprojects/robotpy-native-wpihal:import)/site-packages/native/wpihal/robotpy-native-wpihal.pc"]),
        ("//subprojects/robotpy-native-wpinet:import", ["$(location //subprojects/robotpy-native-wpinet:import)/site-packages/native/wpinet/robotpy-native-wpinet.pc"]),
        ("//subprojects/robotpy-native-wpiutil:import", ["$(location //subprojects/robotpy-native-wpiutil:import)/site-packages/native/wpiutil/robotpy-native-wpiutil.pc"]),
        ("//subprojects/robotpy-wpinet:import", ["$(location //subprojects/robotpy-wpinet:import)/site-packages/wpinet/wpinet.pc"]),
        ("//subprojects/robotpy-wpiutil:import", ["$(location //subprojects/robotpy-wpiutil:import)/site-packages/wpiutil/wpiutil.pc"]),
    ],
    pyproject_toml = ":pyproject.toml",
    yaml_files = glob(["semiwrap/**/*.yml"]),
)

hal_simulation_extension(
    entry_point = ["hal/simulation/main.cpp"],
    extension_name = "_simulation",
    extra_hdrs = glob(["hal/simulation/*.h"]),
    extra_srcs = glob(
        ["hal/simulation/*.cpp"],
        exclude = ["hal/simulation/main.cpp"],
    ),
    includes = ["hal/simulation"],
    deps = [
        "//subprojects/robotpy-native-wpihal:wpihal",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
    ],
)

wpihal_extension(
    entry_point = ["hal/src/hal.cpp"],
    extension_name = "_wpiHal",
    deps = [
        "//subprojects/robotpy-native-wpihal:wpihal",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
    ],
)

define_pybind_library(
    name = "hal",
    version = MOSTROBOTPY_VERSION,
)

filegroup(
    name = "generated_files",
    srcs = [
        "hal_simulation.generated_files",
        "wpihal.generated_files",
    ],
    visibility = ["//visibility:public"],
)
