load("//:version.bzl", "MOSTROBOTPY_VERSION")
load("//bazel_scripts:file_resolver_utils.bzl", "local_extension_util", "local_pc_file_util")
load("//bazel_scripts:generate_build_info.bzl", "generate_build_info")
load("//subprojects/robotpy-hal:generated_build_info.bzl", "define_pybind_library", "hal_simulation_extension", "wpihal_extension")

generate_build_info(
    name = "hal",
    local_pkgcfgs = local_pc_file_util(
                        "//subprojects/robotpy-native-wpihal",
                        ["native/wpihal/robotpy-native-wpihal.pc"],
                    ) +
                    local_pc_file_util(
                        "//subprojects/robotpy-native-wpiutil",
                        ["native/wpiutil/robotpy-native-wpiutil.pc"],
                    ) +
                    local_pc_file_util(
                        "//subprojects/robotpy-wpiutil",
                        [
                            "wpiutil/wpiutil.pc",
                            "wpiutil/wpiutil-casters.pc",
                            "wpiutil/wpiutil-casters.pybind11.json",
                        ],
                    ),
    pyproject_toml = ":pyproject.toml",
    yaml_files = glob(["semiwrap/**/*.yml"]),
)

hal_simulation_extension(
    entry_point = ["hal/simulation/main.cpp"],
    extension_name = "_simulation",
    extra_hdrs = glob(["hal/simulation/*.h"]),
    extra_srcs = glob(
        ["hal/simulation/*.cpp"],
        exclude = ["hal/simulation/main.cpp"],
    ),
    includes = ["hal/simulation"],
    deps = [
        "//subprojects/robotpy-native-wpihal:wpihal",
        local_extension_util("//subprojects/robotpy-wpiutil", "wpiutil"),
    ],
)

wpihal_extension(
    entry_point = ["hal/src/hal.cpp"],
    extension_name = "_wpiHal",
    deps = [
        "//subprojects/robotpy-native-wpihal:wpihal",
        local_extension_util("//subprojects/robotpy-wpiutil", "wpiutil"),
    ],
)

define_pybind_library(
    name = "hal",
    version = MOSTROBOTPY_VERSION,
)
