load("@rules_semiwrap//:defs.bzl", "copy_native_file", "robotpy_library")
load("//:version.bzl", "MOSTROBOTPY_VERSION")

copy_native_file(
    name = "halsim_ds_socket",
    base_path = "halsim_ds_socket/",
    library = "@bzlmodrio-allwpilib//libraries/cpp/halsim_ds_socket:shared_raw",
)

robotpy_library(
    name = "halsim_ds_socket",
    package_name = "robotpy-halsim-ds-socket",
    srcs = glob(["halsim_ds_socket/**/*.py"]),
    data = [
        ":halsim_ds_socket.copy_lib",
    ],
    imports = ["."],
    package_author_email = "RobotPy Development Team <robotpy@googlegroups.com>",
    package_project_urls = {"Source code": "https://github.com/robotpy/mostrobotpy"},
    package_requires = ["robotpy-native-wpiutil==2025.3.2"],
    package_summary = "Binary wrapper for FRC WPIUtil library",
    robotpy_wheel_deps = [
        "//subprojects/robotpy-wpilib:import",
    ],
    strip_path_prefixes = ["subprojects/robotpy-halsim-ds-socket"],
    version = MOSTROBOTPY_VERSION,
    visibility = ["//visibility:public"],
)
