load("@rules_semiwrap//:defs.bzl", "copy_extension_library", "copy_native_file", "make_pyi", "robotpy_library")
load("//:version.bzl", "MOSTROBOTPY_VERSION")
load("//subprojects/robotpy-halsim-gui:generated_build_info.bzl", "halsim_gui_ext_extension")

halsim_gui_ext_extension(
    entry_point = ["halsim_gui/_ext/main.cpp"],
    header_to_dat_deps = [],
    deps = [
        "//subprojects/pyntcore:ntcore_pybind_library",
        "//subprojects/robotpy-hal:wpihal_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_pybind_library",
        "@bzlmodrio-allwpilib//libraries/cpp/halsim_gui:shared",
    ],
)

make_pyi(
    name = "make_pyi1",
)

copy_extension_library(
    name = "copy_halsim_gui_ext",
    extension = "_halsim_gui_ext",
    output_directory = "halsim_gui/_ext/",
)

copy_native_file(
    name = "halsim_gui",
    base_path = "halsim_gui/",
    library = "@bzlmodrio-allwpilib//libraries/cpp/halsim_gui:shared_raw",
)

robotpy_library(
    name = "halsim-gui",
    package_name = "robotpy-halsim-gui",
    srcs = glob(["halsim_gui/**/*.py"]),
    data = [
        ":copy_halsim_gui_ext",
        ":halsim_gui.copy_lib",
    ],
    imports = ["."],
    package_author_email = "RobotPy Development Team <robotpy@googlegroups.com>",
    package_project_urls = {"Source code": "https://github.com/robotpy/mostrobotpy"},
    package_requires = ["robotpy-native-wpiutil==2025.3.2"],
    package_summary = "Binary wrapper for FRC WPIUtil library",
    robotpy_wheel_deps = [
        "//subprojects/pyntcore:import",
        "//subprojects/robotpy-hal:import",
        "//subprojects/robotpy-wpimath:import",
    ],
    strip_path_prefixes = ["subprojects/robotpy-halsim-gui"],
    version = MOSTROBOTPY_VERSION,
    visibility = ["//visibility:public"],
)

filegroup(
    name = "generated_files",
    srcs = [
        "halsim_gui_ext.generated_files",
    ],
    visibility = ["//visibility:public"],
)
