load("//bazel_scripts:copy_native_file.bzl", "copy_native_file")
load("//bazel_scripts:pybind_rules.bzl", "pybind_python_library")

copy_native_file(
    name = "halsim_ws_server",
    base_path = "halsim_ws/server/",
    library = "@bzlmodrio-allwpilib//libraries/cpp/halsim_ws_server:shared_raw",
)

copy_native_file(
    name = "halsim_ws_client",
    base_path = "halsim_ws/client/",
    library = "@bzlmodrio-allwpilib//libraries/cpp/halsim_ws_client:shared_raw",
)

pybind_python_library(
    name = "halsim-ws",
    srcs = glob(["halsim_ws/**/*.py"]),
    data = [
        "halsim_ws_client.copy_lib",
        "halsim_ws_server.copy_lib",
    ],
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "//subprojects/robotpy-hal:hal",
        "//subprojects/robotpy-wpinet:wpinet",
    ],
)
