load("@rules_semiwrap//:defs.bzl", "copy_native_file", "robotpy_library")

copy_native_file(
    name = "halsim_ws_server",
    base_path = "halsim_ws/server/",
    library = "@bzlmodrio-allwpilib//libraries/cpp/halsim_ws_server:shared_raw",
)

copy_native_file(
    name = "halsim_ws_client",
    base_path = "halsim_ws/client/",
    library = "@bzlmodrio-allwpilib//libraries/cpp/halsim_ws_client:shared_raw",
)

robotpy_library(
    name = "halsim-ws",
    package_name = "robotpy-halsim-ws",
    srcs = glob(["halsim_ws/**/*.py"]),
    data = [
        "halsim_ws_client.copy_lib",
        "halsim_ws_server.copy_lib",
    ],
    imports = ["."],
    robotpy_wheel_deps = [
        "//subprojects/robotpy-hal:import",
        "//subprojects/robotpy-wpinet:import",
    ],
    strip_path_prefixes = ["subprojects/robotpy-halsim-ws"],
    version = VERSION,
    visibility = ["//visibility:public"],
)
