load("@rules_semiwrap//:defs.bzl", "copy_native_file", "robotpy_library")
load("//:version.bzl", "MOSTROBOTPY_VERSION")
load("//bazel_scripts:file_resolver_utils.bzl", "local_pybind_library")

copy_native_file(
    name = "halsim_ws_server",
    base_path = "halsim_ws/server/",
    library = "@bzlmodrio-allwpilib//libraries/cpp/halsim_ws_server:shared_raw",
)

copy_native_file(
    name = "halsim_ws_client",
    base_path = "halsim_ws/client/",
    library = "@bzlmodrio-allwpilib//libraries/cpp/halsim_ws_client:shared_raw",
)

robotpy_library(
    name = "halsim-ws",
    package_name = "robotpy-halsim-ws",
    srcs = glob(["halsim_ws/**/*.py"]),
    data = [
        "halsim_ws_client.copy_lib",
        "halsim_ws_server.copy_lib",
    ],
    imports = ["."],
    package_author_email = "RobotPy Development Team <robotpy@googlegroups.com>",
    package_project_urls = {"Source code": "https://github.com/robotpy/mostrobotpy"},
    package_requires = ["robotpy-native-wpiutil==2025.3.2"],
    package_summary = "Binary wrapper for FRC WPIUtil library",
    robotpy_wheel_deps = [
        local_pybind_library("//subprojects/robotpy-hal", "hal"),
        local_pybind_library("//subprojects/robotpy-wpinet", "wpinet"),
    ],
    strip_path_prefixes = ["subprojects/robotpy-halsim-ws"],
    version = MOSTROBOTPY_VERSION,
    visibility = ["//visibility:public"],
)
