load("@rules_semiwrap//:defs.bzl", "create_native_library")
load("//:version.bzl", "NATIVE_VERSION")

create_native_library(
    name = "apriltag",
    package_name = "robotpy-native-apriltag",
    headers = "@bzlmodrio-allwpilib//libraries/cpp/apriltag:header_files",
    headers_external_repositories = ["bzlmodrio-allwpilib~~setup_bzlmodrio_allwpilib_cpp_dependencies~bazelrio_edu_wpi_first_apriltag_apriltag-cpp_headers"],
    lib_name = "apriltag",
    module_dependencies = [
        "native.wpiutil._init_robotpy_native_wpiutil",
        "native.wpimath._init_robotpy_native_wpimath",
    ],
    shared_library = "@bzlmodrio-allwpilib//libraries/cpp/apriltag:shared_raw",
    strip_pkg_prefix = ["subprojects/robotpy-native-apriltag"],
    version = NATIVE_VERSION,
)
