load("@rules_semiwrap//:defs.bzl", "create_native_library")
load("//:version.bzl", "NATIVE_VERSION")
load("//subprojects/robotpy-native-datalog:generated_build_info.bzl", "define_library")

define_library(
    name = "wpilib",
    headers = "@bzlmodrio-allwpilib//libraries/cpp/datalog:header_files",
    headers_external_repositories = ["bzlmodrio-allwpilib~~setup_bzlmodrio_allwpilib_cpp_dependencies~bazelrio_edu_wpi_first_datalog_datalog-cpp_headers"],
    shared_library = "@bzlmodrio-allwpilib//libraries/cpp/datalog:shared_raw",
    version = NATIVE_VERSION,
)