load("//:version.bzl", "NATIVE_VERSION")
load("//bazel_scripts:generate_native_build_info.bzl", "generate_native_build_info")
load("//subprojects/robotpy-native-romi:generated_build_info.bzl", "define_library")

generate_native_build_info(
    name = "romi",
)

define_library(
    name = "romi",
    headers = "@bzlmodrio-allwpilib//libraries/cpp/romiVendordep:header_files",
    headers_external_repositories = ["bzlmodrio-allwpilib~~setup_bzlmodrio_allwpilib_cpp_dependencies~bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_headers"],
    shared_library = "@bzlmodrio-allwpilib//libraries/cpp/romiVendordep:shared_raw",
    windows_interface_library = "@bzlmodrio-allwpilib//libraries/cpp/romiVendordep:shared_interface",
    version = NATIVE_VERSION,
)
