load("@rules_semiwrap//:defs.bzl", "create_native_library")
load("//:version.bzl", "VERSION")

create_native_library(
    name = "wpiHal",
    package_name = "robotpy-native-wpihal",
    headers = "@bzlmodrio-allwpilib//libraries/cpp/hal:header_files",
    headers_external_repositories = ["bzlmodrio-allwpilib~~setup_bzlmodrio_allwpilib_cpp_dependencies~bazelrio_edu_wpi_first_hal_hal-cpp_headers"],
    lib_name = "wpihal",
    module_dependencies = ["native.wpiutil._init_robotpy_native_wpiutil"],
    shared_library = "@bzlmodrio-allwpilib//libraries/cpp/hal:shared_raw",
    strip_pkg_prefix = ["subprojects/robotpy-native-wpihal"],
    version = VERSION,
)
