load("//:version.bzl", "NATIVE_VERSION")
load("//bazel_scripts:generate_native_build_info.bzl", "generate_native_build_info")
load("//subprojects/robotpy-native-wpihal:generated_build_info.bzl", "define_library")

generate_native_build_info(
    name = "wpihal",
)

define_library(
    name = "wpiHal",
    headers = "@bzlmodrio-allwpilib//libraries/cpp/hal:header_files",
    headers_external_repositories = ["bzlmodrio-allwpilib~~setup_bzlmodrio_allwpilib_cpp_dependencies~bazelrio_edu_wpi_first_hal_hal-cpp_headers"],
    shared_library = "@bzlmodrio-allwpilib//libraries/cpp/hal:shared_raw",
    version = NATIVE_VERSION,
    windows_interface_library = "@bzlmodrio-allwpilib//libraries/cpp/hal:shared_interface",
)
