load("@rules_semiwrap//:defs.bzl", "create_native_library")
load("//:version.bzl", "NATIVE_VERSION")
load("//subprojects/robotpy-native-wpilib:generated_build_info.bzl", "define_library")
load("//bazel_scripts:generate_native_build_info.bzl", "generate_native_build_info")

generate_native_build_info(
    name = "wpilib",
)

define_library(
    name = "wpilib",
    headers = "@bzlmodrio-allwpilib//libraries/cpp/wpilibc:header_files",
    headers_external_repositories = ["bzlmodrio-allwpilib~~setup_bzlmodrio_allwpilib_cpp_dependencies~bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_headers"],
    shared_library = "@bzlmodrio-allwpilib//libraries/cpp/wpilibc:shared_raw",
    version = NATIVE_VERSION,
)
