load("@rules_semiwrap//:defs.bzl", "create_native_library")
load("//bazel_scripts:version.bzl", "VERSION")

create_native_library(
    name = "wpimath",
    package_name = "robotpy-native-wpimath",
    lib_name = "wpimath",
    module_dependencies = ["native.wpiutil._init_robotpy_native_wpiutil"],
    shared_library = "@bzlmodrio-allwpilib//libraries/cpp/wpimath:shared_raw",
    strip_pkg_prefix = ["subprojects/robotpy-native-wpimath"],
    version = VERSION,
)
