load("//:version.bzl", "NATIVE_VERSION")
load("//bazel_scripts:generate_native_build_info.bzl", "generate_native_build_info")
load("//subprojects/robotpy-native-wpimath:generated_build_info.bzl", "define_library")

generate_native_build_info(
    name = "wpimath",
)

define_library(
    name = "wpimath",
    headers = "@bzlmodrio-allwpilib//libraries/cpp/wpimath:header_files",
    headers_external_repositories = ["bzlmodrio-allwpilib~~setup_bzlmodrio_allwpilib_cpp_dependencies~bazelrio_edu_wpi_first_wpimath_wpimath-cpp_headers"],
    shared_library = "@bzlmodrio-allwpilib//libraries/cpp/wpimath:shared_raw",
    version = NATIVE_VERSION,
)
