load("@rules_semiwrap//:defs.bzl", "create_native_library")
load("//:version.bzl", "NATIVE_VERSION")
load("//subprojects/robotpy-native-wpinet:generated_build_info.bzl", "define_library")
load("//bazel_scripts:generate_native_build_info.bzl", "generate_native_build_info")

generate_native_build_info(
    name = "wpinet",
)

define_library(
    name = "wpinet",
    headers = "@bzlmodrio-allwpilib//libraries/cpp/wpinet:header_files",
    headers_external_repositories = ["bzlmodrio-allwpilib~~setup_bzlmodrio_allwpilib_cpp_dependencies~bazelrio_edu_wpi_first_wpinet_wpinet-cpp_headers"],
    shared_library = "@bzlmodrio-allwpilib//libraries/cpp/wpinet:shared_raw",
    version = NATIVE_VERSION,
)
