load("@rules_semiwrap//:defs.bzl", "create_native_library")
load("//:version.bzl", "VERSION")

create_native_library(
    name = "xrp",
    package_name = "robotpy-native-xrp",
    headers = "@bzlmodrio-allwpilib//libraries/cpp/xrpVendordep:header_files",
    headers_external_repositories = ["bzlmodrio-allwpilib~~setup_bzlmodrio_allwpilib_cpp_dependencies~bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_headers"],
    lib_name = "xrp",
    module_dependencies = ["native.wpilib._init_robotpy_native_wpilib"],
    shared_library = "@bzlmodrio-allwpilib//libraries/cpp/xrpVendordep:shared_raw",
    strip_pkg_prefix = ["subprojects/robotpy-native-xrp"],
    version = VERSION,
)
