load("//:version.bzl", "MOSTROBOTPY_VERSION")
load("//bazel_scripts:generate_build_info.bzl", "generate_build_info")
load("//subprojects/robotpy-romi:generated_build_info.bzl", "define_pybind_library", "romi_extension")

generate_build_info(
    name = "romi",
    local_pkgcfgs = [
        ("//subprojects/robotpy-native-romi:import", ["$(location //subprojects/robotpy-native-romi:import)/site-packages/native/romi/robotpy-native-romi.pc"]),
        ("//subprojects/robotpy-native-wpimath:import", ["$(location //subprojects/robotpy-native-wpimath:import)/site-packages/native/wpimath/robotpy-native-wpimath.pc"]),
        ("//subprojects/robotpy-native-wpiutil:import", ["$(location //subprojects/robotpy-native-wpiutil:import)/site-packages/native/wpiutil/robotpy-native-wpiutil.pc"]),
        ("//subprojects/robotpy-native-wpilib:import", ["$(location //subprojects/robotpy-native-wpilib:import)/site-packages/native/wpilib/robotpy-native-wpilib.pc"]),
        ("//subprojects/robotpy-native-wpihal:import", ["$(location //subprojects/robotpy-native-wpihal:import)/site-packages/native/wpihal/robotpy-native-wpihal.pc"]),
        ("//subprojects/robotpy-native-wpinet:import", ["$(location //subprojects/robotpy-native-wpinet:import)/site-packages/native/wpinet/robotpy-native-wpinet.pc"]),
        ("//subprojects/robotpy-native-ntcore:import", ["$(location //subprojects/robotpy-native-ntcore:import)/site-packages/native/ntcore/robotpy-native-ntcore.pc"]),
        ("//subprojects/robotpy-wpimath:import", [
            "$(location //subprojects/robotpy-wpimath:import)/site-packages/wpimath/wpimath.pc",
            "$(location //subprojects/robotpy-wpimath:import)/site-packages/wpimath/geometry/wpimath_geometry.pc",
            "$(location //subprojects/robotpy-wpimath:import)/site-packages/wpimath/filter/wpimath_filter.pc",
            "$(location //subprojects/robotpy-wpimath:import)/site-packages/wpimath/_controls/wpimath_controls.pc",
            "$(location //subprojects/robotpy-wpimath:import)/site-packages/wpimath/kinematics/wpimath_kinematics.pc",
            "$(location //subprojects/robotpy-wpimath:import)/site-packages/wpimath/spline/wpimath_spline.pc",
        ]),
        ("//subprojects/robotpy-wpilib:import", [
            "$(location //subprojects/robotpy-wpilib:import)/site-packages/wpilib/wpilib.pc",
            "$(location //subprojects/robotpy-wpilib:import)/site-packages/wpilib/interfaces/wpilib_interfaces.pc",
            "$(location //subprojects/robotpy-wpilib:import)/site-packages/wpilib/event/wpilib_event.pc",
        ]),
        ("//subprojects/robotpy-wpinet:import", ["$(location //subprojects/robotpy-wpinet:import)/site-packages/wpinet/wpinet.pc"]),
        ("//subprojects/robotpy-hal:import", ["$(location //subprojects/robotpy-hal:import)/site-packages/hal/wpihal.pc"]),
        ("//subprojects/pyntcore:import", ["$(location //subprojects/pyntcore:import)/site-packages/ntcore/ntcore.pc"]),
        ("//subprojects/robotpy-wpiutil:import", ["$(location //subprojects/robotpy-wpiutil:import)/site-packages/wpiutil/wpiutil.pc"]),
    ],
    pyproject_toml = ":pyproject.toml",
    yaml_files = glob(["semiwrap/**/*.yml"]),
)

romi_extension(
    entry_point = ["romi/src/main.cpp"],
    deps = [
        "//subprojects/robotpy-native-romi:romi",
        "//subprojects/robotpy-wpilib:wpilib_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_geometry_pybind_library",
    ],
)

define_pybind_library(
    name = "romi",
    version = MOSTROBOTPY_VERSION,
)

filegroup(
    name = "generated_files",
    srcs = [
        "romi.generated_files",
    ],
    visibility = ["//visibility:public"],
)
